--- a/Python/templates/settings.html
+++ b/Python/templates/settings.html
@@ -37,8 +37,29 @@
                 <input type="verifyPassword" id="verifyPassword" class="form-control" placeholder="Verify Password" name = "verifyPassword" value = "{{ request.form.verifyPassword }}" required>
             </div>
             <button class="btn btn-lg btn-primary btn-block" type="submit">Save Changes</button>
+            <button class="btn btn-lg btn-danger btn-block" type="submit" data-toggle="modal" data-target="#deleteModal">Delete Account</button>
         </form>
     </div>
+
+<div class="modal fade" id="deleteModal" tabindex="-1" role="dialog" aria-labelledby="deleteModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="deleteModalLabel">Confirm</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <h5>Are you sure you want to delete your account?</h5>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-danger">Delete Account</button>
+      </div>
+    </div>
+  </div>
+</div>
 
 <footer class="py-5 bg-dark">
     <div class="container">
