--- a/Python/templates/macros.html
+++ b/Python/templates/macros.html
@@ -52,7 +52,7 @@
                           <a class="nav-item nav-link" href="/returns.html">Returns</a>
                       </li>
                   </ul>
-                  {% else %}
+                  {% elif active == 'returns' %}
                   <ul class="navbar-nav">
                       <li class="nav-item">
                         <a class="nav-item nav-link" href="/">Home</a>
@@ -67,6 +67,21 @@
                           <a class="nav-item nav-link active" href="/returns.html">Returns</a>
                       </li>
                   </ul>
+                  {% else %}
+                      <ul class="navbar-nav">
+                          <li class="nav-item">
+                              <a class="nav-item nav-link" href="/">Home</a>
+                          </li>
+                          <li>
+                              <a class="nav-item nav-link" href="/shop.html">Shop</a>
+                          </li>
+                          <li>
+                              <a class="nav-item nav-link" href="/returns.html">Returns</a>
+                          </li>
+                          <li>
+                          <a class="nav-item nav-link" href="/returns.html">Returns</a>
+                      </li>
+                      </ul>
                   {% endif %}
               {% else %}
                 {% if active == 'home' %}
@@ -105,7 +120,7 @@
                           <a class="nav-item nav-link" href="/returns.html">Returns</a>
                       </li>
                   </ul>
-                  {% else %}
+                  {% elif active== 'returns' %}
                   <ul class="navbar-nav">
                       <li class="nav-item">
                         <a class="nav-item nav-link" href="/">Home</a>
@@ -117,6 +132,18 @@
                           <a class="nav-item nav-link active" href="/returns.html">Returns</a>
                       </li>
                   </ul>
+                  {% else %}
+                  <ul class="navbar-nav">
+                      <li class="nav-item">
+                          <a class="nav-item nav-link" href="/">Home</a>
+                      </li>
+                      <li>
+                          <a class="nav-item nav-link" href="/shop.html">Shop</a>
+                      </li>
+                      <li>
+                          <a class="nav-item nav-link" href="/returns.html">Returns</a>
+                      </li>
+                  </ul>
                   {% endif %}
               {% endif %}
           </div>
@@ -124,26 +151,27 @@
             {% if loggedin %}
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            <span class="fa fa-user"></span>
                             {{ loggedin }}
                         </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                         {% if active == 'profile' %}
-                            <a class="dropdown-item active" href="profile.html"><span class="fa fa-user"></span> Profile</a>
+                            <a class="dropdown-item active" href="profile.html"> Profile</a>
                             <a class="dropdown-item" href="history.html">Order History</a>
                             <a class="dropdown-item" href="wishlist.html">Wish List</a>
                             <a class="dropdown-item" href="/?logoff=true">Log Off</a>
                         {% elif active == 'history' %}
-                            <a class="dropdown-item" href="profile.html"><span class="fa fa-user"></span> Profile</a>
+                            <a class="dropdown-item" href="profile.html"> Profile</a>
                             <a class="dropdown-item active" href="history.html">Order History</a>
                             <a class="dropdown-item" href="wishlist.html">Wish List</a>
                             <a class="dropdown-item" href="/?logoff=true">Log Off</a>
                         {% elif active == 'wishlist' %}
-                            <a class="dropdown-item" href="profile.html"><span class="fa fa-user"></span> Profile</a>
+                            <a class="dropdown-item" href="profile.html">Profile</a>
                             <a class="dropdown-item" href="history.html">Order History</a>
                             <a class="dropdown-item active" href="wishlist.html">Wish List</a>
                             <a class="dropdown-item" href="/?logoff=true">Log Off</a>
                         {% else %}
-                            <a class="dropdown-item" href="profile.html"><span class="fa fa-user"></span> Profile</a>
+                            <a class="dropdown-item" href="profile.html">Profile</a>
                             <a class="dropdown-item" href="history.html">Order History</a>
                             <a class="dropdown-item" href="wishlist.html">Wish List</a>
                             <a class="dropdown-item" href="/?logoff=true">Log Off</a>
