--- a/Python/templates/returns.html
+++ b/Python/templates/returns.html
@@ -5,7 +5,7 @@
 
 <div class="jumbotron jumbotron-fluid">
       <div class="container">
-        <h1 class="display-4">Order History</h1>
+        <h1 class="display-4">Returns</h1>
       </div>
     </div>
 
