--- a/Python/templates/signup.html
+++ b/Python/templates/signup.html
@@ -17,7 +17,7 @@
       <label for="inputPhone" class="sr-only">Phone Number</label>
       <input type="phone" id="inputPhone" class="form-control" placeholder="Phone Number" name = "phone" value = "{{ request.form.phone }}" required/>
       <input type= "birthday" class="form-control" id="birthday" name="birthday" placeholder="Birthday" type="text" value = "{{ request.form.birthday }}" required/>
-      <button class="btn btn-lg btn-primary btn-block" type="submit">Sign up</button>
+      <a class="btn btn-lg btn-primary btn-block" role="button" href="/">Sign up</a>
       <p class="mt-5 mb-3 text-muted">&copy; 2019</p>
     </form>
 {% endblock content %}
