Checkout transaction completed and clean up

--- a/Python/templates/checkout.html
+++ b/Python/templates/checkout.html
@@ -178,7 +178,7 @@
               </div>
               <div class="col-md-6 mb-3">
                 <label for="type">Card Type</label>
-                <select class="custom-select d-block w-100" id="type" required>
+                <select class="custom-select d-block w-100" id="type" name="cardType" value="{{ request.form.cardType }}" required>
                   <option value="">Choose...</option>
                   <option>Visa</option>
                   <option>Discover</option>
