--- a/Python/templates/index.html
+++ b/Python/templates/index.html
@@ -6,7 +6,7 @@
     <main role="main" class="inner cover">
       <div class="container">
       <h1 class="cover-heading">Welcome to the Shop</h1>
-      <p class="lead text-muted">We sell stuff.</p>
+      <p class="lead text-muted" style="color:white;">We sell stuff.</p>
           <p>
             <a href="shop.html" class="btn btn-primary my-2">Buy Something?</a>
             {% if not loggedin %}
@@ -18,8 +18,8 @@
 
     <footer class="py-5">
         <div class="container">
-        <p class="m-0 text-center text-black">Copyright &copy; Raymond Huang, Gurpreeth Singh, Tenzin Loden 2019</p>
-    </div>
+            <p class="m-0 text-center text-black">Copyright &copy; Raymond Huang, Gurpreeth Singh, Tenzin Loden 2019</p>
+        </div>
     <!-- /.container -->
   </footer>
 {% endblock content %}
