--- a/Python/static/css/album.css
+++ b/Python/static/css/album.css
@@ -4,8 +4,13 @@
 
 
 body{
-height:100vh;
+    height:100vh;
 	display: -ms-flexbox;
+    background: url("/static/images/cover.jpeg") no-repeat center center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
 }
 
 .navbar {
