--- a/Python/templates/item.html
+++ b/Python/templates/item.html
@@ -125,10 +125,15 @@
             <input type="seller" class="form-control" id="inputSeller" placeholder="Seller Name">
           </div>
           <div class="form-row">
-            <div class="form-group col-md-6">
-              <label for="inputCategory">Category</label>
-              <input type="text" class="form-control" id="inputCategory">
-            </div>
+              <div class="form-group col-md-6">
+                <label for="type">Category</label>
+                  <select class="custom-select d-block w-100" id="type" name="cardType" value="{{ request.form.cardType }}" required>
+                    <option value="">Choose...</option>
+                    <option>Shirts</option>
+                    <option>Pants</option>
+                    <option>Shoes</option>
+                  </select>
+              </div>
             <div class="form-group col-md-4">
               <label for="inputCategory">Image</label>
               <div class="custom-file">
