--- a/Python/templates/macros.html
+++ b/Python/templates/macros.html
@@ -1,10 +1,10 @@
 {% macro nav(active) %}
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container-fluid">
-      <a class="navbar-brand" href="/">Navbar</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
+      <a class="navbar-brand" href="#">
+        <img src="/static/images/favicon.jpg" width="30" height="30" class="d-inline-block align-top" alt="">
+        Clothing
+      </a>
           <div class="navbar-collapse" id="navbarNav">
               {% if loggedin %}
                   {% if active == 'home' %}
