--- a/Python/templates/shop.html
+++ b/Python/templates/shop.html
@@ -120,8 +120,13 @@
           </div>
           <div class="form-row">
             <div class="form-group col-md-6">
-              <label for="inputCategory">Category</label>
-              <input type="text" class="form-control" id="inputCategory">
+              <label for="type">Category</label>
+                <select class="custom-select d-block w-100" id="type" name="cardType" value="{{ request.form.cardType }}" required>
+                  <option value="">Choose...</option>
+                  <option>Shirts</option>
+                  <option>Pants</option>
+                  <option>Shoes</option>
+                </select>
             </div>
             <div class="form-group col-md-4">
               <label for="inputCategory">Image</label>
