--- a/Python/templates/signin.html
+++ b/Python/templates/signin.html
@@ -1,7 +1,7 @@
 {% extends "layouts.html" %}
 {% block content %}
  <form class="form-signin" method="POST" action="">
-      <img class="mb-4" src="../../assets/brand/bootstrap-solid.svg" alt="" width="72" height="72">
+      <img class="mb-4" src="/static/images/favicon.jpg" alt="" width="72" height="72">
       <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
       <label for="inputEmail" class="sr-only">Email address</label>
       <input type="email" id="inputEmail" class="form-control" placeholder="Email address" name = "email" value="{{ request.form.email }}" autofocus>
