--- a/Python/templates/signup.html
+++ b/Python/templates/signup.html
@@ -2,7 +2,7 @@
 {% extends "layouts.html" %}
 {% block content %}
     <form class="form-signin" method = "POST" action = "">
-      <img class="mb-4" src="../../assets/brand/bootstrap-solid.svg" alt="" width="72" height="72">
+      <img class="mb-4" src="/static/images/favicon.jpg" alt="" width="72" height="72">
       <h1 class="h3 mb-3 font-weight-normal">Sign Up</h1>
       <label for="inputFirst" class="sr-only">First Name</label>
       <input type="firstName" id="inputFirst" class="form-control" placeholder="First Name" name = "firstName" value = "{{ request.form.firstName }}" required>
