--- a/Python/templates/checkout.html
+++ b/Python/templates/checkout.html
@@ -145,14 +145,14 @@
               <div class="row">
                 <div class="col-md-6 mb-3">
                   <label for="firstName1">First name</label>
-                  <input type="text" class="form-control" id="firstName1" placeholder="" name="firstName" value="{{ request.form.firstName }}" required>
+                  <input type="text" class="form-control" id="firstName1" placeholder="" name="firstNameShip" value="{{ request.form.firstNameShip }}" required>
                   <div class="invalid-feedback">
                     Valid first name is required.
                   </div>
                 </div>
                 <div class="col-md-6 mb-3">
                   <label for="lastName1">Last name</label>
-                  <input type="text" class="form-control" id="lastName1" placeholder="" name="secondName" value="{{ request.form.secondName }}" required>
+                  <input type="text" class="form-control" id="lastName1" placeholder="" name="secondNameShip" value="{{ request.form.secondNameShip }}" required>
                   <div class="invalid-feedback">
                     Valid last name is required.
                   </div>
@@ -161,7 +161,7 @@
 
               <div class="mb-3">
                 <label for="address1">Address</label>
-                <input type="text" class="form-control" id="address1" placeholder="1234 Main St" name="address" value="{{ request.form.address }}" required>
+                <input type="text" class="form-control" id="address1" placeholder="1234 Main St" name="addressShip" value="{{ request.form.addressShip }}" required>
                 <div class="invalid-feedback">
                   Please enter your shipping address.
                 </div>
@@ -169,13 +169,13 @@
 
               <div class="mb-3">
                 <label for="address3">Address 2 <span class="text-muted">(Optional)</span></label>
-                <input type="text" class="form-control" id="address3" placeholder="Apartment or suite" name="address2" value="{{ request.form.address2 }}">
+                <input type="text" class="form-control" id="address3" placeholder="Apartment or suite" name="address2Ship" value="{{ request.form.address2Ship }}">
               </div>
 
               <div class="row">
                 <div class="col-md-5 mb-3">
                   <label for="country1">Country</label>
-                  <select class="custom-select d-block w-100" id="country1" name="country" value="{{ request.form.country }}" required>
+                  <select class="custom-select d-block w-100" id="country1" name="countryShip" value="{{ request.form.countryShip }}" required>
                     <option name="country">Choose...</option>
                     <option>United States</option>
                   </select>
@@ -185,7 +185,7 @@
                 </div>
                 <div class="col-md-4 mb-3">
                   <label for="state1">State</label>
-                  <select class="custom-select d-block w-100" id="state1" name="state" value="{{ request.form.state }}" required>
+                  <select class="custom-select d-block w-100" id="state1" name="stateShip" value="{{ request.form.stateShip }}" required>
                     <option name="state">Choose...</option>
                     <option>California</option>
                   </select>
@@ -195,7 +195,7 @@
                 </div>
                 <div class="col-md-3 mb-3">
                   <label for="zip1">Zip</label>
-                  <input type="text" class="form-control" id="zip1" placeholder="" name="zip" value="{{ request.form.zip }}" required>
+                  <input type="text" class="form-control" id="zip1" placeholder="" name="zipShip" value="{{ request.form.zipShip }}" required>
                   <div class="invalid-feedback">
                     Zip code required.
                   </div>
