Thank you html and checkout form
-Added calender to creditcard expiration form in checkout.html
-Created order confirmation page for checkouts

--- a/Python/templates/macros.html
+++ b/Python/templates/macros.html
@@ -76,7 +76,7 @@
                               <a class="nav-item nav-link" href="/shop.html">Shop</a>
                           </li>
                           <li>
-                              <a class="nav-item nav-link" href="/returns.html">Returns</a>
+                              <a class="nav-item nav-link" href="/checkout.html">Shopping Cart</a>
                           </li>
                           <li>
                           <a class="nav-item nav-link" href="/returns.html">Returns</a>
