Home page update and premium page
-Added images to premium carousel and changed text colors in home page

--- a/Python/static/css/album.css
+++ b/Python/static/css/album.css
@@ -42,3 +42,11 @@ footer {
     width: 100%;
     background-color:transparent;
 }
+
+.cover-heading{
+    color:white;
+}
+
+.lead{
+    color:silver;
+}
