--- a/Python/templates/premium.html
+++ b/Python/templates/premium.html
@@ -20,17 +20,17 @@
         </ol>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="static/images/thanos.jpg" class="d-block w-100" alt="...">
+            <img src="static/images/discount.jpg" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
-              <h5>Discounts</h5>
-              <p>Get up to 10% off on items!</p>
+              <h5 class="carousel-text">Discounts</h5>
+              <p class="carousel-text">Get up to 10% off on items!</p>
             </div>
           </div>
           <div class="carousel-item">
-            <img src="static/images/thanos.jpg" class="d-block w-100" alt="...">
+            <img src="static/images/shipping.png" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
-              <h5>Free Shipping</h5>
-              <p>Free shipping on all items to the lower 48 states.</p>
+              <h5 class="carousel-text">Free Shipping</h5>
+              <p class="carousel-text">Free shipping on all items to the lower 48 states.</p>
             </div>
           </div>
         </div>
