--- a/Python/templates/checkout.html
+++ b/Python/templates/checkout.html
@@ -79,7 +79,7 @@
 
             <div class="mb-3">
               <label for="email">Email <span class="text-muted">(Optional)</span></label>
-              <input type="email" class="form-control" id="email" placeholder="you@example.com" name="email" value="{{ request.form.email }}">
+              <input type="email" class="form-control" id="email" placeholder="you@example.com" name="email" value="{{ request.form.email }}" required>
               <div class="invalid-feedback">
                 Please enter a valid email address for shipping updates.
               </div>
@@ -102,7 +102,7 @@
               <div class="col-md-5 mb-3">
                 <label for="country">Country</label>
                 <select class="custom-select d-block w-100" id="country" name="country" value="{{ request.form.country }}" required>
-                  <option name="country">Choose...</option>
+                  <option name="country">United States</option>
                   <option>United States</option>
                 </select>
                 <div class="invalid-feedback">
@@ -112,8 +112,9 @@
               <div class="col-md-4 mb-3">
                 <label for="state">State</label>
                 <select class="custom-select d-block w-100" id="state" name="state" value="{{ request.form.state }}" required>
-                  <option name="state">Choose...</option>
-                  <option>California</option>
+                  <option name="state">New York</option>
+                    <option>California</option>
+                    <option>New York</option>
                 </select>
                 <div class="invalid-feedback">
                   Please provide a valid state.
@@ -173,7 +174,7 @@
                 <div class="col-md-5 mb-3">
                   <label for="country1">Country</label>
                   <select class="custom-select d-block w-100" id="country1" name="countryShip" value="{{ request.form.countryShip }}" required>
-                    <option name="country">Choose...</option>
+                    <option name="country">United States</option>
                     <option>United States</option>
                   </select>
                   <div class="invalid-feedback">
@@ -183,8 +184,9 @@
                 <div class="col-md-4 mb-3">
                   <label for="state1">State</label>
                   <select class="custom-select d-block w-100" id="state1" name="stateShip" value="{{ request.form.stateShip }}" required>
-                    <option name="state">Choose...</option>
+                    <option name="state">New York</option>
                     <option>California</option>
+                    <option>New York</option>
                   </select>
                   <div class="invalid-feedback">
                     Please provide a valid state.
@@ -206,7 +208,7 @@
             <div class="row">
               <div class="col-md-6 mb-3">
                 <label for="cc-name">Name on card</label>
-                <input type="text" class="form-control" id="cc-name" placeholder="" name="cardName" value="{{ request.form.cardName }} "required>
+                <input type="text" class="form-control" id="cc-name" placeholder="" name="cardName" value="{{ request.form.cardName }}" required>
                 <small class="text-muted">Full name as displayed on card</small>
                 <div class="invalid-feedback">
                   Name on card is required
@@ -223,7 +225,7 @@
             <div class="row">
               <div class="col-md-3 mb-3">
                 <label for="cc-expiration">Expiration</label>
-                <input type= "expirationDate" class="form-control" id="cc-expiration" name="cardExp" placeholder="" type="text" value = "{{ request.form.cardExp }}" required/>
+                <input type= "expirationDate" class="form-control" id="cc-expiration" name="expiration" placeholder="" type="text" value = "{{ request.form.expiration }}" required/>
                 <div class="invalid-feedback">
                   Expiration date required
                 </div>
@@ -246,11 +248,14 @@
               </div>
             </div>
             <hr class="mb-4">
-            <button class="btn btn-primary btn-lg btn-block" type="submit" name="checkout" data-toggle="modal" data-target="#confirmModal">Continue to checkout</button>
+              {% if quantity == 0 %}
+                <button class="btn btn-secondary btn-lg btn-block" type="submit" name="checkout" data-toggle="modal" data-target="#confirmModal" disabled>Continue to checkout</button>
+              {% else %}
+                <button class="btn btn-primary btn-lg btn-block" type="submit" name="checkout" data-toggle="modal" data-target="#confirmModal">Continue to checkout</button>
+              {% endif %}
           </form>
         </div>
       </div>
-      
     </div>
 
 
