--- a/Python/templates/index.html
+++ b/Python/templates/index.html
@@ -6,7 +6,7 @@
     <main role="main" class="inner cover">
       <div class="container">
       <h1 class="cover-heading">Welcome to the Shop</h1>
-      <p class="lead text-muted" style="color:white;">We sell stuff.</p>
+      <p class="lead text-muted" style="color:white;">We sell clothing and sports goods.</p>
           <p>
             <a href="shop.html" class="btn btn-primary my-2">Buy Something?</a>
             {% if not loggedin %}
