--- a/Python/templates/layouts.html
+++ b/Python/templates/layouts.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="Raymond Huang" content="">
-    <link rel="icon" href="../../../../favicon.ico">
+    <link rel="icon" href="static/images/favicon.jpg">
 
     {% if title %}
         <title>{{ title }}</title>
