--- a/Python/templates/shop.html
+++ b/Python/templates/shop.html
@@ -54,7 +54,7 @@
           {% for item in data %}
           <div class="col-lg-4 col-md-6 mb-4">
             <div class="card h-100">
-              <a href="/item.html"><img class="card-img-top" src="static/images/items/{{ item[3] }}.png" alt=""></a>
+              <a href="/item.html?type={{ item[0] }}&price={{ item[1] }}&desc={{ item[2] }}&id={{ item[3] }}"><img class="card-img-top" src="static/images/items/{{ item[3] }}.png" alt=""></a>
               <div class="card-body">
                 <h4 class="card-title">
                   <a href="/item.html?type={{ item[0] }}&price={{ item[1] }}&desc={{ item[2] }}&id={{ item[3] }}">
